<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gustavo.wubalubadubdub.ui.viewmodel.CharacterDetailsViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/application_background">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/card_background_color"
            app:cardCornerRadius="25dp">

            <RelativeLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgClose"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/round_alpha_background"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:onClick="@{()->viewModel.characterActions.close()}"
                    android:translationZ="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="4dp"
                    android:src="@drawable/ic_close"/>

                <ImageView
                    android:id="@+id/characterPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@{viewModel.characterDetails.imageDescription}"
                    app:imageUrl="@{viewModel.characterDetails.image}"
                    tools:srcCompat="@drawable/rick_sanchez_portrait" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/characterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/characterPhoto"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:lines="2"
                    android:maxLines="2"
                    android:text="@{viewModel.characterDetails.name}"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="16sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeTextType="uniform"
                    app:lineHeight="18dp"
                    tools:text="Rick Sanchez" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/Species"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/characterName"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center_vertical"
                    android:weightSum="3">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical|start"
                        android:lines="2"
                        android:maxLines="2"
                        android:text="@string/species"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="16sp"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeTextType="uniform"
                        app:lineHeight="18dp" />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:ignore="UselessLeaf" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/characterSpecies"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/Species"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@id/Species"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical|start"
                        android:lines="2"
                        android:maxLines="2"
                        android:text="@{viewModel.characterDetails.species}"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="16sp"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeTextType="uniform"
                        tools:text="Humano" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/Status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Species"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:weightSum="3">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical|start"
                        android:lines="2"
                        android:maxLines="2"
                        android:text="@string/status"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="16sp"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeTextType="uniform"
                        app:lineHeight="18dp" />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:ignore="UselessLeaf" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/characterStatus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical|start"
                        android:lines="2"
                        android:maxLines="2"
                        android:text="@{viewModel.characterDetails.status}"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="16sp"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeTextType="uniform"
                        app:lineHeight="18dp"
                        tools:text="Vivo" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/Origin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Status"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center_vertical"
                    android:weightSum="3">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/characterStatus"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="0dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical|start"
                        android:lines="2"
                        android:maxLines="2"
                        android:text="@string/origin"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="16sp"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeTextType="uniform"
                        app:lineHeight="18dp" />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:ignore="UselessLeaf" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/characterOrigin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/Origin"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@id/Origin"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical|start"
                        android:lines="2"
                        android:maxLines="2"
                        android:text="@{viewModel.characterDetails.origin.name}"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="16sp"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeTextType="uniform"
                        app:lineHeight="18dp"
                        tools:text="Terra" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/FirstAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Origin"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center_vertical"
                    android:weightSum="3">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/Origin"
                        android:layout_alignParentStart="true"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical|start"
                        android:lines="1"
                        android:maxLines="1"
                        android:text="@string/first_appearance"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="16sp"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeTextType="uniform"
                        app:lineHeight="18dp" />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:ignore="UselessLeaf" />


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/characterFirstAppearance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/FirstAppearance"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@id/FirstAppearance"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical|start"
                        android:lines="2"
                        android:maxLines="2"
                        android:text="@{viewModel.characterDetails.firstEpisode}"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="16sp"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeTextType="uniform"
                        app:lineHeight="18dp"
                        tools:text="Episódio 1" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/LastAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/FirstAppearance"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center_vertical"
                    android:weightSum="3">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/FirstAppearance"
                        android:layout_alignParentStart="true"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical|start"
                        android:text="@string/last_appearance"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="16sp"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeTextType="uniform"
                        app:lineHeight="18dp" />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:ignore="UselessLeaf" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/characterLastAppearance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/LastAppearance"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@id/LastAppearance"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical|start"
                        android:lines="2"
                        android:maxLines="2"
                        android:text="@{viewModel.characterDetails.lastEpisode}"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="16sp"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeTextType="uniform"
                        app:lineHeight="18dp"
                        tools:text="Episódio 41" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>
</layout>